Fix CSS effect parsing warning and Stage null pointer exception
- Enhance error handling: add defensive checks when getting Stage from scene